# ai-workshop-code

./: .gitignore  Baby_step_scrape_your_first_website_and_pipe_to_an_LLM.ipynb  Evaluate_several_software_solutions_at_once_with_Firecrawl's_crawl_and_LLM_for_judging.ipynb  Long_term_memory_&_personalized_LLM_responses.ipynb  Scrape_the_web_agentically_with_Firecrawl_and_LangGraph.ipynb  Web_scraping_for_LLM_in_2024.ipynb  cnn_dailymail_validation.csv  setup-python-projects.sh
projects/: .gitignore  hello.py  pyproject.toml
projects/agent-mcp/: README.md  SETUP.txt  agent.py  agent_guardrails.py  bootcamp_agent.py  logging_utils.py  main.py  mcp_config.py  pyproject.toml  web_search_agent.py
projects/eval-workshop-meri/: eval_utils.py  evaluator.py  generator.py  main.py  prompts.py  topics.py
projects/firecrawl_examples/: batch.py  extract.py  extract_pricing.py  firecrawl_webhook.py  job_scrape_results_20241204_003125.txt
projects/langgraph/: __init__.py
projects/ocr-battle/: claude-ocr.py  consts.py  gemini-ocr.py  ground_truths.py  llama-ocr.py  main.py  models.py  openai-ocr.py  utils.py  x-ocr.py
projects/openai-agents-sdk/: .gitignore  agent_context.py  agent_logger.py  agent_with_state_or_context.py  most_basic_agent.py  multi-agents.py  prompts.py  pyproject.toml  utils.py
projects/rag-stuff/: .gitignore  built-in-reranking.py  eval.py  llm.py  main.py  manual-reranking.py  models.py  pyproject.toml  rerank_wrapper.py  retrieval.py  test_gemini.py
projects/tracing_eval/: example_article.py  generate_some_traces.py  langsmith_eval.py  prompts.py  trace_custom_model.py
projects/web_search_battle/: dataset.py  evaluator.py  exa_search.py  gemini_search_grounding.py  hello.py  main.py  perplexity.py  reference.py  tavily_search.py
projects/workflow_v_agent/: main.py
(+100 files in other folders)
