[project]
name = "projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langsmith>=0.1.139",
    "openai>=1.54.1",
    "python-dotenv>=1.0.1",
    "quotientai>=0.1.1",
    "packaging",
    "tiktoken>=0.8.0",
    "google-generativeai>=0.8.3",
    "tavily-python>=0.5.0",
    "exa-py>=1.6.0",
    "firecrawl>=1.10.2",
    "together>=1.3.5",
    "anthropic>=0.40.0",
    "judges>=0.0.5",
    "groq>=0.15.0",
    "langgraph>=0.2.69",
    "langchain-core>=0.3.33",
    "langchain-anthropic>=0.3.0",
    "google-genai>=1.0.0",
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[tool.uv.workspace]
members = ["mcp", "mcp_examples"]
